k8s/webapp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fincore
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/managed-by: kubectl
    # Istio sidecar injection
    istio-injection: enabled
