k8s/webapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fincore-app
  namespace: fincore
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app: fincore-app
spec:
  type: ClusterIP
  selector:
    app: fincore-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
